--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,150 @@
-/* .list li label::before {
-    content: "";
-    display: block;
-    width: 0.9rem;
-    height: 0.9rem;
-    background: hsl(200, 100%, 90%);
-    border-radius: 0.25em;
-    display: flex;
-    justify-content: center;
+*,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    background: #066acd;
+}
+
+.container {
+    width: 50%;
+    top: 50%;
+    left: 50%;
+    background: white;
+    border-radius: 10px;
+    min-width: 450px;
+    position: absolute;
+    min-height: 100px;
+    transform: translate(-50%, -50%);
+}
+
+.title {
+    overflow: hidden;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    /* max-width: 480px; */
+    text-align: center;
+}
+
+.subtitle {
+    text-align: center;
+    font-size: 20px;
+    padding: 20px;
+}
+
+.newtask {
+    position: relative;
+    padding: 30px 20px;
+}
+
+.newtask input {
+    width: 75%;
+    height: 45px;
+    padding: 12px;
+    color: #111111;
+    font-weight: 500;
+    position: relative;
+    border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    border: 2px solid #d1d3d4;
+}
+
+.newtask button {
+    position: relative;
+    float: right;
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #0d75ec;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    outline: none;
+    width: 20%;
+    height: 45px;
+    border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.tasks {
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
+    background-color: #ffffff;
+    padding: 15px 20px;
+    margin-top: 10px;
+}
+
+.task {
+    border-radius: 5px;
     align-items: center;
+    justify-content: space-between;
+    border: 1px solid #939697;
+    cursor: pointer;
+    background-color: #c5e1e6;
+    height: 50px;
+    margin-bottom: 8px;
+    padding: 5px 10px;
+    display: flex;
+    list-style-type: none;
 }
 
-.list li label:hover::before {
-    background: hsl(200, 100%, 80%);
-}
-
-.list li:has(input:checked) label::before {
-    content: "";
-    background: hsl(200, 100%, 40%);
-    color: hsl(200, 100%, 90%);
-    font-size: 0.75rem;
+.task-label {
+    padding-top: 14px;
+    font-family: system-ui, sans-serif;
+    font-size: 2rem;
     font-weight: bold;
+    line-height: 1.1;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
 }
 
-.list li:has(input:checked) label:hover::before {
-    background: hsl(200, 100%, 30%);
-} */
+.task-title {
+    font-family: system-ui, sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1.1;
+    display: grid;
+    grid-template-columns: 1em auto;
+    gap: 0.5em;
+}
+
+
+.btn-add {
+    position: relative;
+    float: right;
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #0d75ec;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    outline: none;
+    width: 20%;
+    height: 45px;
+    border-radius: 5px;
+    font-family: "Poppins", sans-serif;
+}
+
+.btn-delete {
+        position: relative;
+        float: right;
+        font-weight: 500;
+        font-size: 16px;
+        background-color: #d50a55;
+        border: none;
+        color: #ffffff;
+        cursor: pointer;
+        outline: none;
+        width: 10%;
+        height: 40px;
+        border-radius: 5px;
+        font-family: 'Poppins', sans-serif;
+}
+
