Update CSS styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -86,7 +86,7 @@ body {
     justify-content: space-between;
     border: 1px solid #939697;
     cursor: pointer;
-    background-color: #c5e1e6;
+    background-color: #acd1ec93;
     height: 50px;
     margin-bottom: 8px;
     padding: 5px 10px;
